--- a/ForLove/Views/Account/Register.cshtml
+++ b/ForLove/Views/Account/Register.cshtml
@@ -1,41 +1,35 @@
-﻿@model ForLove.Models.RegisterViewModel
-@{
+﻿@{
+    Layout = "~/Views/Shared/_LayoutLogin.cshtml";
     ViewBag.Title = "注册";
 }
+@model ForLove.Models.RegisterViewModel
+<div class="register-container">
+    <h1>沈诗卉</h1>
+    <div class="connect">
+        <p>暂不开放注册</p>
+    </div>
+    @using (Html.BeginForm("Register", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @role = "form", id = "registerForm" }))
+    {
+        <div>
+            <input type="text" name="username" class="username" placeholder="您的用户名" autocomplete="off" />
+        </div>
+        <div>
+            <input type="password" name="password" class="password" placeholder="输入密码" oncontextmenu="return false" onpaste="return false" />
+        </div>
+        <div>
+            <input type="password" name="confirm_password" class="confirm_password" placeholder="再次输入密码" oncontextmenu="return false" onpaste="return false" />
+        </div>
+        <div>
+            <input type="text" name="phone_number" class="phone_number" placeholder="输入手机号码" autocomplete="off" id="number" />
+        </div>
+        <div>
+            <input type="email" name="email" class="email" placeholder="输入邮箱地址" oncontextmenu="return false" onpaste="return false" />
+        </div>
 
-<h2>@ViewBag.Title。</h2>
+        <button id="submit" type="submit">注 册</button>
+    }
+    <a href="@Url.Action("Login", "Account")">
+        <button type="button" class="register-tis">已经有账号？</button>
+    </a>
+</div>
 
-@using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-{
-    @Html.AntiForgeryToken()
-    <h4>创建新帐户。</h4>
-    <hr />
-    @Html.ValidationSummary("", new { @class = "text-danger" })
-    <div class="form-group">
-        @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
-        </div>
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
-        </div>
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
-        </div>
-    </div>
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="注册" />
-        </div>
-    </div>
-}
-
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
